--- a/Fsing/FThresholdsPaper/kmacros3.sty
+++ b/Fsing/FThresholdsPaper/kmacros3.sty
@@ -5,8 +5,8 @@
 \DeclareSymbolFont{rsfs}{OMS}{rsfs}{m}{n}
 \DeclareSymbolFontAlphabet{\scr}{rsfs}
 
-\newenvironment{pf}[1][{\it Proof:}]{\begin{trivlist}
-\item[\hskip \labelsep {\bfseries #1}]}{\end{trivlist}}
+% \newenvironment{pf}[1][{\it Proof:}]{\begin{trivlist}
+% \item[\hskip \labelsep {\bfseries #1}]}{\end{trivlist}}
 
 %%***Collaborative editing commands***
 \newcommand{\note}[1]{\marginpar{\sffamily\tiny #1}}
@@ -355,7 +355,7 @@
  \def\sesa#1{0
  \rightarrow #1 \rightarrow #1 \rightarrow #1 \rightarrow 0}
 
-\renewcommand{\to}[1][]{\xrightarrow{\ #1\ }}
+%\renewcommand{\to}[1][]{\xrightarrow{\ #1\ }}
 \newcommand{\onto}[1][]{\protect{\xrightarrow{\ #1\ }\hspace{-0.8em}\rightarrow}}
 \newcommand{\into}[1][]{\lhook \joinrel \xrightarrow{\ #1\ }}
 %%%%%%%%%%
